Design Changes for the morePresent so that its noticeable.

--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -107,8 +107,11 @@
                                 </div>
                             </div>
                             <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 2 && showMarkerForMoreEvents != false">
-                                <div class="richcc-icon-container">
+                                <!--<div class="richcc-icon-container">
                                     <i class="richcc-icon icon-more"></i>
+                                </div>-->
+                                <div class="circle-marker">
+                                    <span class="circle"></span><span class="circle"></span><span class="circle"></span>
                                 </div>
                             </div>
                         </div>
