--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -74,9 +74,9 @@
                 </div>
             </div>
         </div>
-        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="!sample.showMode">
+        <div style="display:block; height:630px;width:100%;margin:30px auto;" ng-if="!sample.showMode">
             <div class="col-xs-12">
-                <div class="col-xs-12" style="display:inline-block;width:100%;height:630px;">
+                <div class="col-xs-12" style="display:block;width:100%;height:630px;margin: 0 auto;">
                     <!--<richcc-datepicker datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>-->
                     <richcc-year datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-year>
                 </div>
