--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -75,7 +75,7 @@
                         popover-trigger="{{popUpTrigger(eventDetails[dt.key])}}"
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForDayMap(rowindex, columnindex)}}"
-                        popover-class="richcc-popup-container {{eventDetails[dt.key][0].isHoliday == true ? 'hasHoliday': '' }}">
+                        popover-class="richcc-popup-container">
                         <div class="richcc-icon-container dayHolder"
                              uib-is-class="
                              'cc-info' for selectedDt,
@@ -339,9 +339,9 @@
     <div id="richccTmplDayPopup">
         <div class="richcc-day-popup">
             <div class="event-container" ng-class="{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
-                <div class="event-container-label"  ng-if="eventDetails[dt.key][0].isHoliday != true">{{dt.date | date:eventPopupSettings.dateFilter}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} Events)</span></div>
+                <div class="event-container-label">{{dt.date | date:eventPopupSettings.dateFilter}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} Events)</span></div>
                 <div class="event-details-container">
-                    <div class="event-detail" ng-repeat="event in eventDetails[dt.key] track by $index" ng-click="popUpEventClickHandler(dt, event)" ng-class="{'event-holiday' : event.isHoliday}">
+                    <div class="event-detail" ng-repeat="event in eventDetails[dt.key] | orderBy:'isHoliday' track by $index" ng-click="popUpEventClickHandler(dt, event)" ng-class="{'event-holiday' : event.isHoliday}" ng-style="{'background-color': (event.isHoliday ? event.bgcolor: '#fff')}">
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}" ng-class="{ 'highlightBorder': event.highlightBorder}">
                             <span class="event-title">{{event.name}}</span><span ng-if="event.isHoliday != true"> : </span><span class="event-subject" ng-if="event.isHoliday != true">{{event.subject}}</span>
