Adding Explicit Angular Wrappers

--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -35,7 +35,7 @@
         }
 
         .hasHoliday {
-            background-color: rgba(155,89,182,0.20);
+            background-color: rgba(155,89,182,0.20) !important;
         }
     </style>
 </head>
