--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -42,15 +42,15 @@
                     <th colspan="1" ng-if="light != true"></th>
                     <th colspan="{{light == true ? 8 : 5}}">
                         <div class="header-actions" ng-class="{'calNavHidden' : hideCalNav == true}">
-                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
+                            <button class="richcc-icon-container nav-left" cc-key="move(-1)" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
-                            </div>
-                            <div class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
-                                <label class="title">{{title}}</label>
-                            </div>
-                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
+                            </button>
+                            <button class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode">
+                                <span class="title">{{title}}</span>
+                            </button>
+                            <button class="richcc-icon-container nav-right" cc-key="move(1)" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
-                            </div>
+                            </button>
                         </div>
                     </th>
                     <th colspan="1" ng-if="light != true"></th>
@@ -68,9 +68,11 @@
                         id="{{dt.uid}}"
                         ng-class="dt.customClass"
                         colspan="1"
+                        tabindex="0"
                         ng-disabled="dt.disabled"
                         ng-init="columnindex = $index"
                         ng-click="richccDaySelected(dt, eventDetails[dt.key])"
+                        ng-keyup="richccDaySelectedKeyUp($event, dt, eventDetails[dt.key])"
                         uib-popover-template="dayPopUpTmpl"
                         popover-trigger="{{popUpTrigger(eventDetails[dt.key])}}"
                         popover-append-to-body="true"
@@ -82,7 +84,6 @@
                              'cc-active' for activeDt
                              on dt"
                              ng-class="{'cc-current': dt.current, 'cc-muted': dt.secondary}"
-                             tabindex="0"
                              ng-if="light != true">
                             <div class="richcc-day">
                                 <span>{{dt.label}}</span>
@@ -398,15 +399,15 @@
                     <th colspan="1"></th>
                     <th colspan="3">
                         <div class="header-actions">
-                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                            <button class="richcc-icon-container nav-left" cc-key="move(-1)" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
-                            </div>
-                            <div class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                            </button>
+                            <button class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode">
                                 <label class="title">{{title}}</label>
-                            </div>
-                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                            </button>
+                            <button class="richcc-icon-container nav-right" cc-key="move(1)" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
-                            </div>
+                            </button>
                         </div>
                     </th>
                     <th colspan="1"></th>
